spacing fix on maker box instruction section

--- a/assets/custom.scss
+++ b/assets/custom.scss
@@ -467,6 +467,7 @@ a:focus {
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  width: 100vw;
 }
 .maker_box_instructions_container {
   display: flex;
